# analytics-api

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
nbs/: 1-verify-api-events.ipynb  2-check-sqlmodel.ipynb  3-sqlmodel-queries.ipynb  4-faker-data.ipynb  hello-world.ipynb
src/: main.py
src/api/db/: config.py  session.py
src/api/events/: __init__.py  models.py  routing.py
